# pkg/users/teacher/api.go
@@ -234,7 +234,7 @@ func (t *Teacher) RegisterStudent(c *gin.Context) {
 // @Param   name     query     string  false  "需要查询学生用户名"
 // @Param   queryRealname     query     string  false  "需要查询学生真实姓名"
 // @Param   queryUserSchoollD     query     string  false  "需要查询学生学号"
-// @Success 200 {object} model.CommonResponse[model.GetUserResponse]
+// @Success 200 {object} model.CommonResponse[[]model.GetUserResponse]
 // @Failure 400  {object} model.CommonResponse[any]
 // @Router /authrequired/teacher/student [post]
 func (t *Teacher) GetStudent(c *gin.Context) {
@@ -251,16 +251,23 @@ func (t *Teacher) GetStudent(c *gin.Context) {
 		apputils.Throw(c, errhandle.ParamsError)
 		return
 	}
-	var user model.User
-	err = tx.First(&user).Error
+	var user []*model.User
+	err = tx.Find(&user).Error
 	if err != nil {
 		apputils.Throw(c, errhandle.UserNonExists)
 		return
 	}
-	var res model.GetUserResponse
-	apputils.IgnoreStructCopy(&res, &user, "")
-	if classname, ok := t.Class.GetClassNameByID(user.Class); ok {
-		res.Class = classname
+	var studentRes []*model.GetUserResponse
+
+	for _, tea := range user {
+		var student model.GetUserResponse
+		apputils.IgnoreStructCopy(&student, &tea, "")
+
+		if classname, ok := t.Class.GetClassNameByID(tea.Class); ok {
+			student.Class = classname
+		}
+		studentRes = append(studentRes, &student)
 	}
-	apputils.OK[model.GetUserResponse](c, res)
+
+	apputils.OK(c, studentRes)
 }
